syntax = "proto3";

package pb;


message SetRequest {
    bytes key       =   1;
    bytes value     =   2;
    VMetaReq meta   =   3;
}

message SetResponse {
    int32   code    =   1;
    string  msg     =   2;
}

message GetRequest {
    bytes key       =   1;
}

message GetResponse {
    int32   code    =   1;
    string  msg     =   2;
    bytes   value   =   3;
    VMetaResp meta  =   4;
}

message ExistsRequest {
    bytes key       =   1;
}

message ExistsResponse {
    int32   code    =   1;
    string  msg     =   2;
    bool   exists   =   3;
}

message DeleteRequest {
    bytes key       =   1;
}

message DeleteResponse {
    int32   code    =   1;
    string  msg     =   2;
}

message VMetaReq {
    int64 TTL       =   1;
    uint32 Tag      =   2;
}

message VMetaResp {
    uint64 ExpiresAt    =   1;
    uint32 Tag          =   2;
}

message CommitResponse {
    int32   code    =   1;
    string  msg     =   2;
}

message ScanRequest {
    ProviderScanOption ProviderScanOption   = 1;
    int32 Limit                             = 2;
}

message ProviderScanOption {
    bool reverse    = 1;
    bytes prefix    = 2;
    bytes offset    = 3;
}

message Entry {
    bytes key       = 1;
    bytes value     = 2;
    VMetaResp meta  = 3;
}

message ScanResponse {
    int32   code            = 1;
    string  msg             = 2;
    repeated Entry entries  = 3;
}